--- a/src/styles/CardGame.css
+++ b/src/styles/CardGame.css
@@ -7,7 +7,7 @@
 .info-container {
   display: flex;
   font-size: 36px;
-  /* justify-content: space-evenly; */
+  justify-content: space-evenly;
   background: #999900;
   color: #33827b;
   font-family: "Carter One", cursive;
@@ -29,7 +29,6 @@
 
 .info-time {
   margin: 0;
-  padding: 0 5px;
   width: 33.33%;
 }
 
