--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -8,7 +8,7 @@
 
 .header-title {
   font-family: "Rock Salt", cursive;
-  font-size: 36px;
+  font-size: 2.25rem;
   color: #999900;
   animation-name: title-flip;
   animation-duration: 2s;
