--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,3 +4,15 @@ body {
   box-sizing: border-box;
   background: #33827b;
 }
+
+html,
+body {
+  font-size: 10px;
+}
+
+@media screen and (orientation: landscape) {
+  html,
+  body {
+    font-size: 16px;
+  }
+}
