--- a/src/styles/CardGame.css
+++ b/src/styles/CardGame.css
@@ -6,7 +6,7 @@
 
 .info-container {
   display: flex;
-  font-size: 36px;
+  font-size: 2.25rem;
   justify-content: space-evenly;
   background: #999900;
   color: #33827b;
@@ -23,7 +23,7 @@
   margin: 0;
   border-left: 1px solid black;
   border-right: 1px solid black;
-  padding: 0 10px;
+  padding: 0 0.625rem;
   width: 33.33%;
 }
 
@@ -37,26 +37,26 @@
   grid-template-columns: 1fr 1fr 1fr;
   row-gap: 15px;
   justify-items: center;
-  margin-top: 50px;
+  margin-top: 3.125rem;
 }
 
 @media screen and (max-width: 1280px) and (max-height: 720px) {
   .cards-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    row-gap: 15px;
+    row-gap: 0.9375rem;
     justify-items: center;
-    margin-top: 20px;
+    margin-top: 1.25rem;
   }
 }
 
 .cards-easy .card-flip-container,
 .cards-easy .card-front,
 .cards-easy .card-back {
-  width: 150px;
-  height: 200px;
-  border-radius: 20px;
-  font-size: 36px;
+  width: 9.375rem;
+  height: 12rem;
+  border-radius: 1.25rem;
+  font-size: 2.25rem;
 }
 
 .card-flip-container {
@@ -66,19 +66,19 @@
 .cards-medium .card-flip-container,
 .cards-medium .card-front,
 .cards-medium .card-back {
-  width: 120px;
-  height: 145px;
-  border-radius: 20px;
-  font-size: 36px;
+  width: 7.2rem;
+  height: 7.5rem;
+  border-radius: 1.25rem;
+  font-size: 1.8rem;
 }
 
 .cards-hard .card-flip-container,
 .cards-hard .card-front,
 .cards-hard .card-back {
-  width: 80px;
-  height: 100px;
-  border-radius: 20px;
-  font-size: 36px;
+  width: 4.6rem;
+  height: 4.8rem;
+  border-radius: 1.25rem;
+  font-size: 1.5rem;
 }
 
 .card-flipper {
@@ -132,21 +132,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: 36px;
+  font-size: 2.25rem;
   font-family: "Carter One", cursive;
-  margin-top: 100px;
+  margin-top: 6.25rem;
   color: #999900;
 }
 
 @media screen and (max-width: 1280px) and (max-height: 720px) {
   .won-container {
-    margin-top: 40px;
+    margin-top: 2.5rem;
   }
 }
 
 .trophy {
-  font-size: 200px;
-  margin-bottom: 20px;
+  font-size: 12.5rem;
+  margin-bottom: 1.25rem;
 }
 
 .won-description {
@@ -157,21 +157,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: 36px;
+  font-size: 2.25rem;
   color: black;
   font-family: "Carter One", cursive;
-  margin-top: 100px;
+  margin-top: 6.25rem;
 }
 
 @media screen and (max-width: 1280px) and (max-height: 720px) {
   .lost-container {
-    margin-top: 40px;
+    margin-top: 2.5rem;
   }
 }
 
 .thumbs-up {
-  font-size: 200px;
-  margin-bottom: 20px;
+  font-size: 12.5rem;
+  margin-bottom: 1.25rem;
 }
 
 .lost-description {
@@ -179,8 +179,8 @@
 }
 
 .start-new-game-again {
-  margin-top: 10px;
-  font-size: 36px;
+  margin-top: 0.625rem;
+  font-size: 2.25rem;
   font-family: "Carter One", cursive;
   background: #69546b;
   color: #999900;
@@ -198,8 +198,28 @@
   .cards-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    row-gap: 15px;
+    row-gap: 0.9375rem;
     justify-items: center;
-    margin-top: 50px;
+    margin-top: 3.125rem;
+  }
+}
+
+@media screen and (orientation: landscape) {
+  .cards-medium .card-flip-container,
+  .cards-medium .card-front,
+  .cards-medium .card-back {
+    width: 8rem;
+    height: 9rem;
+    border-radius: 1.25rem;
+    font-size: 2.25rem;
+  }
+
+  .cards-hard .card-flip-container,
+  .cards-hard .card-front,
+  .cards-hard .card-back {
+    width: 5rem;
+    height: 6.5rem;
+    border-radius: 1.25rem;
+    font-size: 2.25rem;
   }
 }
