--- a/src/styles/NewGame.css
+++ b/src/styles/NewGame.css
@@ -2,8 +2,8 @@
 
 .new-game-button {
   border: none;
-  margin-top: 400px;
-  font-size: 60px;
+  margin-top: 25rem;
+  font-size: 3.75rem;
   font-family: "Carter One", cursive;
   background: #69546b;
   color: #999900;
@@ -13,13 +13,13 @@
 
 @media screen and (max-width: 1280px) and (max-height: 720px) {
   .new-game-button {
-    margin-top: 200px;
+    margin-top: 12.5rem;
   }
 }
 
 @media screen and (min-width: 1500px) {
   .new-game-button {
-    margin-top: 300px;
+    margin-top: 18.75rem;
   }
 }
 
@@ -30,14 +30,14 @@
 }
 
 .difficulty-container {
-  margin-top: 400px;
-  font-size: 60px;
+  margin-top: 25rem;
+  font-size: 3.75rem;
   text-align: center;
 }
 
 @media screen and (max-width: 1280px) and (max-height: 720px) {
   .difficulty-container {
-    margin-top: 150px;
+    margin-top: 9.375rem;
   }
 }
 
