--- a/src/styles/CardGame.css
+++ b/src/styles/CardGame.css
@@ -53,8 +53,8 @@
 .cards-easy .card-flip-container,
 .cards-easy .card-front,
 .cards-easy .card-back {
-  width: 8rem;
-  height: 11rem;
+  width: 9.375rem;
+  height: 12rem;
   border-radius: 1.25rem;
   font-size: 2.25rem;
 }
@@ -138,11 +138,11 @@
   color: #999900;
 }
 
-@media screen and (max-width: 1280px) and (max-height: 720px) {
+/* @media screen and (max-width: 1280px) and (max-height: 720px) {
   .won-container {
     margin-top: 2.5rem;
   }
-}
+} */
 
 .trophy {
   font-size: 12.5rem;
